<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">
    <LinearLayout
        android:id="@+id/llout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:id="@+id/rl_1"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="100dp"
                android:id="@+id/profile_Student_pic"
                android:layout_centerVertical="true"
                app:cardElevation="10dp"
                android:layout_marginStart="40dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/welcome_walkthrough"/>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_two"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/analytics"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_cloud_upload_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_uploads"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/analytics"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_three"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/my_course"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_history_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/my_course"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_four"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            > <ImageView
            android:id="@+id/my_bookmark"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_bookmarks_24"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/my_bookmark"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_five"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/my_tutor"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_share_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/my_tutor"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/my_library"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_feedback_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/my_library"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/share"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_contact_phone_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/share"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/suggestion"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_rate_review_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/suggestion"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_9"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/about_us"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/about_us"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/about_us"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_10"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/header_background"
            android:layout_marginHorizontal="5dp"
            android:padding="2dp"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/Privacy_us"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_privacy_tip_24"
                android:layout_centerVertical="true"
                android:layout_marginStart="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/Privacy_us"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_next_24"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/rgb"/>
    </LinearLayout>


</ScrollView>